cmake_minimum_required(VERSION 3.24)
project(lab3_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab4_1 main.cpp)
add_executable(lab4_2 main2.cpp)
add_executable(lab4_3 main3.cpp)
add_executable (lab4_4 main4.cpp)
add_executable (lab4_5 main5.cpp)
add_executable (lab4_6 main6.cpp)
add_executable (lab4_7 main7.cpp)
add_executable (lab4_8 main8.cpp)
add_executable (lab4_9 main9.cpp)
add_executable (lab4_10 main10.cpp)
add_executable (lab4_11 main11.cpp)
add_executable (lab4_12 main12.cpp)
add_executable (lab4_13 main13.cpp)
add_executable (lab4_14 main14.cpp)
add_executable (lab4_15 main15.cpp)
add_executable (lab4_16 main16.cpp)
add_executable (lab4_17 main17.cpp)
add_executable (lab4_18 main18.cpp)
add_executable (lab4_19 main19.cpp)
add_executable (lab4_20 main20.cpp)
